[gd_scene load_steps=19 format=2]

[ext_resource path="res://entities/projectile_spawner/projectile_spawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/soldier/scripts/healthbar.gd" type="Script" id=2]
[ext_resource path="res://libs/state_machine/state_machine.gd" type="Script" id=3]
[ext_resource path="res://entities/soldier/_soldier.gd" type="Script" id=4]
[ext_resource path="res://assets/shaders/paper-material.tres" type="Material" id=5]
[ext_resource path="res://entities/soldier/assets/soldier_body.png" type="Texture" id=6]
[ext_resource path="res://entities/soldier/assets/soldier_arm.png" type="Texture" id=7]
[ext_resource path="res://entities/soldier/scripts/graphics.gd" type="Script" id=8]
[ext_resource path="res://entities/soldier/states/soldier_idle.gd" type="Script" id=9]
[ext_resource path="res://libs/bit_entity_mover/bit_entity_mover.gd" type="Script" id=10]
[ext_resource path="res://libs/health/health.gd" type="Script" id=11]
[ext_resource path="res://entities/soldier/states/soldier_dead.gd" type="Script" id=12]
[ext_resource path="res://entities/soldier/scripts/weapon_selector.gd" type="Script" id=13]
[ext_resource path="res://entities/soldier/assets/health-bar-fill.png" type="Texture" id=14]
[ext_resource path="res://entities/soldier/assets/health-bar-bg.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]
resource_name = "die"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("character/main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("aim/ArrowWidget/arm:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 27.3609

[node name="Soldier" type="Node2D" groups=[
"entity",
"soldier",
]]
script = ExtResource( 4 )

[node name="BitEntityMover" type="Node" parent="."]
script = ExtResource( 10 )
body_path = NodePath("..")
stay_parallel_to_floor = true

[node name="WeaponSelector" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 11 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
actor_path = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
fsm_path = NodePath("..")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
fsm_path = NodePath("..")

[node name="UI" type="Control" parent="."]
visible = false
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = 2.0
margin_right = 15.0
margin_bottom = 2.5
max_value = 10000.0
value = 10000.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 14 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/HealthBar"]

[node name="Base" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Graphics" type="Node2D" parent="Base"]
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="character" type="Node2D" parent="Base/Graphics"]
__meta__ = {
"_edit_lock_": true
}

[node name="main" type="Sprite" parent="Base/Graphics/character"]
material = ExtResource( 5 )
position = Vector2( 8, -32 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 6 )
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="aim" type="Node2D" parent="Base/Graphics"]
__meta__ = {
"_edit_lock_": true
}

[node name="ArrowWidget" type="Node2D" parent="Base/Graphics/aim"]
position = Vector2( -7, -21 )
__meta__ = {
"_edit_lock_": true
}

[node name="arm" type="Sprite" parent="Base/Graphics/aim/ArrowWidget"]
material = ExtResource( 5 )
position = Vector2( 15, -11 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 7 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Base/Graphics"]
autoplay = "idle"
anims/die = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="ProjectileSpawner" parent="Base" instance=ExtResource( 1 )]
position = Vector2( 0, -21 )
soldier_owner_path = NodePath("../..")

[node name="Hurtbox" type="Area2D" parent="." groups=[
"soldier",
"trigger",
]]
collision_layer = 8
collision_mask = 2147483656
__meta__ = {
"_edit_lock_": true
}

[node name="1" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2( 4, -24 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="weapon_shoot" from="." to="Base/ProjectileSpawner" method="spawn"]
[connection signal="switch_weapon" from="WeaponSelector" to="Base/ProjectileSpawner" method="switch_weapon"]
[connection signal="health_updated" from="Health" to="UI/HealthBar" method="_on_Health_health_updated"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
